This fixes navbar hamburger not showing in responsive and adds the hero image for parallax.

--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -101,7 +101,7 @@ nav {
     display: block;
     width: 20px;
     height: 2px;
-    background: #00192f;
+    background: #fff;
     border-radius: 2px;
     margin-left: 14px;
   }
